templates/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
  labels:
    app.kubernetes.io/name: SERVICE_NAME
spec:
  selector:
    app.kubernetes.io/name: SERVICE_NAME
  ports:
    - name: http
      port: 80
      targetPort: CONTAINER_PORT
